<resources>
    <string name="app_name">TestDemo</string>
    <string name="title">用户登录</string>
    <string name="label">标签初始化</string>
    <string name="assetmold">设备模具绑定</string>
    <string name="hints">请填写备注</string>
    <!--人员-->
    <string name="loader">提交人</string>
    <string name="receiver">接收人</string>
    <string name="checkname">检验员</string>
    <string name="outsource">外协接收员</string>
    <string name="statistician">统计员</string>
    <string name="warehouse">仓库管理员</string>
    <string name="material">领料人</string>
    <string name="operator">操作工</string>
    <string name="sender">发送人</string>
    <!--网址-->
    <string name="resetnet">恢复默认网址</string>
    <string name="net">更改网址</string>

    <string name="username">工号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="version">当前版本1.0</string>
    <string name="order">扫描订单标签</string>
    <string name="ordernumber">订单号</string>
    <string name="workshop">车间选择</string>
    <string name="shop">车间</string>
    <string name="checkprocess">工序选择</string>
    <string name="process">工序</string>
    <string name="checkcount">检验数量</string>
    <string name="qualified">合格数量</string>
    <string name="unqualified">不合格数量</string>
    <string name="status">不合格状态</string>
    <string name="datehint">请选择日期</string>
    <string name="upload">提交</string>
    <string name="space">-</string>
    <string name="labeltype">标签类型</string>
    <string name="rfid">RFID</string>
    <string name="rfidid">编号</string>
    <string name="scan">扫描标签</string>
    <string name="record">录入信息</string>
    <string name="labellist">已录入标签列表：</string>
    <string name="serialize">RFID序列号—RFID物理编号</string>
    <string name="query">查询</string>
    <string name="namelist">未检员工名单</string>
    <string name="confirm">确认</string>
    <string name="asset">设备号</string>
    <string name="mold">模具号</string>
    <string name="messcontent">消息内容</string>
    <string name="date">日期</string>
    <string name="sendmessage">消息推送</string>
    <string name="openservice">开启服务</string>
    <string name="stopservice">关闭服务</string>
    <string name="function">主要功能</string>
    <string name="assetstatus">设备状态</string>
    <string name="unusual">异常</string>
    <string name="repaired">已修</string>
    <string name="recordlabel">录卡(5)</string>
    <string name="assetlist">设备维修列表</string>

</resources>
