<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/scan"
            android:text="@string/order"
            android:gravity="center"
            android:textSize="20sp"
            android:background="#FFCCFF"
            android:textColor="@color/White"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:id="@+id/order"
            android:textSize="20sp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/workshop"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/spinner1"
            android:layout_weight="1"
            android:layout_gravity="center"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/checkprocess"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/spinner2"
            android:layout_weight="1"
            android:layout_gravity="center"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/tv1"
            android:text="@string/asset"
            android:gravity="center"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/asset"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/tv2"
            android:text="@string/assetstatus"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/status"
            android:text="@string/repaired"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <Button
        android:layout_width="150dp"
    android:layout_height="50dp"
    android:id="@+id/upload"
    android:text="@string/upload"
    android:textSize="20sp"
    android:layout_gravity="center"
    android:background="#FFCCFF"
    android:textColor="@color/White"/>
    </LinearLayout>
    </LinearLayout>