<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/scan1"
                android:text="@string/order"
                android:textSize="20sp"
                android:background="@color/Pink"
                android:textColor="@color/White"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/order"
                android:focusable="false"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/tv1"
                android:text="@string/workshop"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/spinner1"
                android:layout_weight="1"
                android:layout_gravity="center"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/tv2"
                android:text="@string/checkprocess"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/spinner2"
                android:layout_weight="1"
                android:layout_gravity="center"></Spinner>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/checkcount"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv3" />
            <EditText
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:id="@+id/checkcount"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tv3"
                android:layout_toEndOf="@+id/tv3" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/qualified"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv4" />
            <EditText
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:id="@+id/qualified"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tv4"
                android:layout_toEndOf="@+id/tv4" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/tv5"
                android:text="@string/unqualified"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:id="@+id/unqualified"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tv5"
                android:layout_toEndOf="@+id/tv5"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/tv6"
                android:text="@string/status"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:id="@+id/status"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tv6"
                android:layout_toEndOf="@+id/tv6"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/tv7"
            android:text="@string/checkname"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/Pink"
            android:textColor="@color/White"/>
        <EditText
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:id="@+id/checkname"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv7"
            android:layout_toEndOf="@+id/tv7" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/comment"
                android:inputType="text|textPersonName"
                android:hint="@string/hints"
                android:textSize="20sp"
                android:ems="10" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/upload"
                android:text="@string/upload"
                android:background="@color/Pink"
                android:textColor="@color/White" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>