<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FFCCFF"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/assetmold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/White"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/asset"
                    android:textSize="20sp"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/asset"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/mold"
                    android:textSize="20sp"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/mold"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/upload"
                android:text="@string/upload"
                android:textSize="20sp"
                android:background="@color/Pink"
                android:textColor="@color/White"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>