<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:paddingTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/workshop"
                android:textSize="20sp"
                android:gravity="center"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/spinner"
                android:layout_gravity="center"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/batch_scan"
                android:text="@string/order"
                android:textSize="20sp"
                android:gravity="center"
                android:background="@color/Pink"
                android:textColor="@color/White"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:id="@+id/message"
                android:textSize="20sp"
                android:focusable="false"
                android:ems="50"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/warehouse"
                android:textSize="20sp"
                android:background="@color/Pink"
                android:textColor="@color/White"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/warehouse"
                android:focusable="false"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/material"
                android:textSize="20sp"
                android:background="@color/Pink"
               android:textColor="@color/White"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/material"
                android:focusable="false"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/upload"
                android:text="@string/upload"
                android:textSize="20sp"
                android:background="@color/Pink"
                android:textColor="@color/White"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>