<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:id="@+id/scan"
                    android:text="@string/order"
                    android:textSize="20sp"
                    android:background="@color/Pink"
                    android:textColor="@color/White"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/batch"
                    android:focusable="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/spinner"
                    android:layout_weight="1"
                    android:layout_gravity="center"></Spinner>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/count"
                    android:gravity="center"
                    android:layout_gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/spinner1"
                    android:layout_weight="1"
                    android:layout_gravity="center"></Spinner>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/datehint"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/date" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/statistician"
                    android:textSize="20sp"
                    android:background="@color/Pink"
                    android:textColor="@color/White"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/name1"
                    android:focusable="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/outsource"
                    android:textSize="20sp"
                    android:background="@color/Pink"
                    android:textColor="@color/White"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/name2"
                    android:focusable="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="260dp"
                    android:layout_height="50dp"
                    android:id="@+id/upload1"
                    android:text="@string/upload"
                    android:textSize="20sp"
                    android:background="@color/Pink"
                    android:textColor="@color/White"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>