<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:id="@+id/scan1"
                    android:text="@string/order"
                    android:textSize="20sp"
                    android:background="@color/Pink"
                    android:textColor="@color/White"
                    android:layout_gravity="center"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/order"
                    android:focusable="false"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/workshop"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/spinner1"
                    android:layout_weight="1"
                    android:layout_gravity="center"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/checkprocess"
                    android:textSize="20sp"
                    android:gravity="center"/>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/spinner2"
                    android:layout_weight="1"
                    android:layout_gravity="center"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:id="@+id/query"
                    android:text="@string/query"
                    android:textSize="20sp"
                    android:background="@color/Pink"
                    android:textColor="@color/White"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/content"
                    android:background="#FFF"
                    android:listSelector="#00000000">
                </ListView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp">
                <Button
                    android:layout_width="260dp"
                    android:layout_height="50dp"
                    android:id="@+id/upload"
                    android:text="提交"
                    android:textSize="20sp"
                    android:background="@color/Pink"
                    android:textColor="@color/White"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>